--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.ai.navigation": "1.1.6",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.inputsystem": "1.14.0",
     "com.unity.render-pipelines.universal": "14.0.12",
     "com.unity.shadergraph": "14.0.12",
     "com.unity.textmeshpro": "3.0.9",
